modified:   css/main.css 	new file:   fonts/3270.ttf 	modified:   js/CookieUtil.js 	modified:   prepareDatabase.py

--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@
 	--bg-plus: #373832;
 	--bg-key: #141511;
 	--table-align: 2px;
-	--font-main: 'HackMono', 'UbuntuMono', 'Hack', 'Ubuntu Mono', 'Consolas', 'Monospace';
-	--font-monospace: 'HackMono', 'UbuntuMono', 'Hack', 'Ubuntu Mono', 'Consolas', 'Monospace';
+	--font-main: 'IBM 3270'， 'HackMono', 'UbuntuMono', 'Hack', 'Ubuntu Mono', 'Consolas', 'Monospace';
+	--font-monospace: 'IBM 3270'， 'HackMono', 'UbuntuMono', 'Hack', 'Ubuntu Mono', 'Consolas', 'Monospace';
 	--red: #F92672;
 	--orange: #FD971F;
 	--orangish: #E69F66;
@@ -59,6 +59,12 @@ input[type="button"], input[type="submit"], button {
 @font-face {
 	font-family: 'HackMono';
 	src: url(../fonts/Hack-Regular.ttf);
+}
+
+
+@font-face {
+	font-family: 'IBM 3270';
+	src: url(../fonts/3270.ttf);
 }
 
 * {
